# Apex-Log-Viewer

./: .c8rc.json  .dockerignore  .envrc  .gitattributes  .gitignore  .prettierignore  .release-please-config.json  .release-please-manifest.json  .vscode-test.mjs  .vscodeignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  docker-compose.e2e-proxy.yml  esbuild.js  eslint.config.mjs  jest.config.e2e-utils.cjs  jest.config.webview.cjs  nx.json  package-lock.json  package.json  package.nls.json  package.nls.pt-br.json  playwright.cli.config.ts  playwright.config.ts  playwright.docs.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  sfdx-project.json  tailwind.config.js  tailwind.config.ts  telemetry.json  tsconfig.base.json  (+7 more)
.azure/: plan.md
.cargo/: config.toml
.codex/environments/: environment.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/workflows/: changelog.yml  ci.yml  claude-code-review.yml  claude.yml  cli-npm-release.yml  codeql.yml  codex-review-auto-comment.yml  commitlint.yml  dependabot-codex-review.yml  dependency-review.yml  e2e-playwright.yml  forbid-sensitive-files.yml  mcp-ci.yml  mcp-npm-release.yml  prerelease.yml  release-flags.yml  release-please.yml  release.yml  rust-release.yml  rust-supply-chain.yml  scorecard.yml  semantic-pr.yml  sf-plugin-npm-release.yml  sf-plugin-release.yml  temp-macos-e2e-debug.yml
.husky/: pre-commit
apps/cli/: Cargo.toml
apps/sf-plugin-apex-log-viewer/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
apps/sf-plugin-apex-log-viewer-mcp/: README.md  package-lock.json  package.json  tsconfig.json
apps/vscode-extension/: .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  commitlint.config.mjs  esbuild.extension.mjs  package-lock.json  package.json  package.nls.json  package.nls.pt-br.json  playwright.config.ts  project.json  tailwind.config.js  tsconfig.extension.json  tsconfig.json  tsconfig.webview-tests.json
config/: project-scratch-def.json  runtime-bundle.json
crates/alv-app-server/: Cargo.toml
crates/alv-app-server/src/: lib.rs  log_lookup_cache.rs  server.rs  transport_stdio.rs
crates/alv-app-server/src/handlers/: logs.rs  orgs.rs
crates/alv-app-server/tests/: app_server_smoke.rs
crates/alv-cli/: Cargo.toml
crates/alv-cli/src/: cli.rs  main.rs
crates/alv-cli/src/commands/: debug_levels.rs  doctor.rs  logs.rs  mod.rs  orgs.rs  skills.rs  tooling.rs  trace_flags.rs  users.rs
crates/alv-cli/tests/: cli_smoke.rs
crates/alv-core/: Cargo.toml
crates/alv-core/src/: auth.rs  cache.rs  cli.rs  cli_json.rs  debug_flags.rs  debug_levels.rs  doctor.rs  lib.rs  log_index.rs  log_ops.rs  log_store.rs  logs.rs  logs_sync.rs  org_inventory.rs  orgs.rs  search.rs  tail.rs  tooling.rs  trace_flags.rs  triage.rs  users.rs
crates/alv-core/tests/: log_store_layout.rs  logs_runtime_smoke.rs  logs_sync_smoke.rs  orgs_smoke.rs  orgs_utf8_smoke.rs
crates/alv-mcp/: Cargo.toml
crates/alv-protocol/: Cargo.toml
crates/alv-protocol/src/: codegen.rs  lib.rs  messages.rs
crates/alv-protocol/tests/: protocol_schema.rs
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/npm/platform/: README.md  package.json
crates/cli/npm/wrapper/: README.md  package.json
crates/cli/npm/wrapper/lib/: resolve-platform.cjs
crates/cli/src/: http.rs  lib.rs  main.rs  sfdx_project.rs
crates/cli/src/commands/: logs_sync.rs
crates/cli/tests/: http.rs  logs_sync.rs  sfdx_project.rs
crates/mcp/: Cargo.toml
docs/: AGENT_CLI_PLAYBOOK.md  APEX-LOG-LIFECYCLE-DESIGN.md  ARCHITECTURE.md  ASSETS.md  AZURE-MONITOR.md  CI.md  PUBLISHING.md  SCRATCH_ORG_POOL.md  SETTINGS.md  TELEMETRY-REVIEW-2026-03-13.md  TELEMETRY.md  TESTING.md  WEBVIEW.md
docs/agents/: domain.md
docs/plan/: 2026-02-22-faster-tests.md
docs/plans/: 2026-01-22-apex-log-viewer-cli-monorepo-design.md  2026-01-29-mcp-ci.md  (+43 more)
media/: webview.css
scripts/: azure-monitor-helpers.js  azure-monitor-helpers.test.js  build-cli-npm-packages.mjs  build-cli-npm-packages.test.js  build-embedded-sf-plugin.mjs  build-runtime-target.mjs  check-dependency-sources.mjs  check-dependency-sources.test.js  clean-vscode-test.js  cli-e2e-workflow.test.js  compute-prerelease-version.mjs  compute-prerelease-version.test.js  copy-package-metadata.test.js  copy-ripgrep-runtime.test.js  copy-runtime-binary.test.js  copy-sf-plugin-skill.mjs  copy-tree-sitter-runtime.test.js  deploy-azure-monitor.js  deploy-azure-monitor.test.js  docs-release.test.js  eslint-type-aware.test.js  fetch-runtime-release.mjs  fetch-runtime-release.test.js  gen-assets.mjs  gen-icon.mjs  gen-l10n.cjs  gen-nls.cjs  generate-changelog.cjs  guard-forbidden-staged.cjs  inject-telemetry-key.cjs  install-linux-deps.sh  merge-coverage.cjs  nx-project.targets.test.js  package-cli-release.mjs  package-cli-release.test.js  packaging-ci.test.js  pr-matrix-workflow.test.js  publish-npm-package-if-needed.mjs  publish-npm-package-if-needed.test.js  repo-security.test.js  (+35 more)
src/: extension.ts  salesforce.ts
(+644 files in other folders)
