[package]
name = "alv-app-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
alv-core = { path = "../alv-core" }
alv-protocol = { path = "../alv-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["sync"] }
