[package]
name = "apex-log-viewer-cli"
version = "0.1.2"
edition = "2021"
description = "Rust CLI for Apex Log Viewer"
license = "MIT"
repository = "https://github.com/Electivus/Apex-Log-Viewer"
homepage = "https://github.com/Electivus/Apex-Log-Viewer"

[[bin]]
name = "apex-log-viewer"
path = "src/main.rs"

[dependencies]
alv-app-server = { version = "0.1.1", path = "../alv-app-server" }

[dev-dependencies]
serde_json = "1.0"
