[package]
name = "apex-log-viewer-cli"
version = "0.1.8"
edition = "2021"
description = "Rust CLI for Apex Log Viewer"
license = "MIT"
repository = "https://github.com/Electivus/Apex-Log-Viewer"
homepage = "https://github.com/Electivus/Apex-Log-Viewer"

[[bin]]
name = "apex-log-viewer"
path = "src/main.rs"

[dependencies]
alv-app-server = { version = "0.1.8", path = "../alv-app-server" }
alv-core = { version = "0.1.8", path = "../alv-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
