[package]
name = "alv-core"
version = "0.1.2"
edition = "2021"
description = "Core runtime services for Apex Log Viewer"
license = "MIT"
repository = "https://github.com/Electivus/Apex-Log-Viewer"
homepage = "https://github.com/Electivus/Apex-Log-Viewer"

[lib]
path = "src/lib.rs"

[dependencies]
grep = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
