[package]
name = "alv-core"
version = "0.1.8"
edition = "2021"
description = "Core runtime services for Apex Log Viewer"
license = "MIT"
repository = "https://github.com/Electivus/Apex-Log-Viewer"
homepage = "https://github.com/Electivus/Apex-Log-Viewer"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
grep = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
# Keep native roots and system proxy support enabled so corporate TLS interception
# works through the OS trust store on Windows, macOS, and Linux.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "rustls-tls-native-roots",
    "system-proxy",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
tiny_http = "0.12"
