[package]
name = "alv-protocol"
version = "0.1.2"
edition = "2021"
description = "Protocol types for the Apex Log Viewer runtime"
license = "MIT"
repository = "https://github.com/Electivus/Apex-Log-Viewer"
homepage = "https://github.com/Electivus/Apex-Log-Viewer"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
