[package]
name = "apex-log-viewer-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apex-log-viewer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.12.0"
